<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Budgetr</string>

    <!-- Activities -->
    <string name="title_activity_add_budget">Add Budget</string>
    <string name="title_activity_edit_budget">Edit Budget</string>
    <string name="title_activity_budget_detail">Budget</string>
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="title_activity_edit_transaction">Edit Transaction</string>
    <string name="title_activity_select_category">Select Category</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Transaction</string>
    <string name="action_submit">Submit</string>

    <!-- Tabs -->
    <string name="title_overview">Overview</string>
    <string name="title_transaction_history">Transactions</string>
    <string name="title_budgets">Budgets</string>

    <!-- Preferences -->
    <string name="pref_general_title">General</string>
    <string name="pref_title_currency">Default Currency</string>
    <string name="title_settings">Settings</string>
    <string name="pref_security_title">Security</string>
    <string name="pref_title_password">Password Protection</string>
    <string name="pref_summary_password">Enable password protection</string>
    <string name="pref_title_set_password">Set Password</string>
    <string name="pref_title_change_password">Change Password</string>
    <string name="pref_summary_change_password">Description</string>
    <string name="pref_title_delete_transactions">Delete all transactions</string>
    <string name="pref_title_delete_budgets">Delete all budgets</string>
    <string name="pref_title_set_currency">Set Currency</string>
    <string name="pref_title_change_currency">Change Currency</string>

    <!-- Dialogs -->
    <string name="dialog_enter_password_title">Enter your password</string>
    <string name="dialog_enter_password_message">Message</string>
    <string name="dialog_pick_repeat">Repeating</string>
    <string name="dialog_pick_reminder">Reminder</string>
    <string name="dialog_delete_budgets_title">Delete all budgets</string>
    <string name="dialog_delete_budgets_message">Do you really want to delete all budgets?</string>
    <string name="dialog_delete_transactions_title">Delete all transactions</string>
    <string name="dialog_delete_transactions_message">Do you really want to delete all transactions?</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">Budgetr was created by Timo Hillmann.</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_message_delete_single">Do you really want to delete this?</string>

    <!-- Toasts -->
    <string name="toast_password_failed">You have entered the wrong password!</string>
    <string name="toast_no_category">Please select a category</string>
    <string name="toast_no_amount">Please enter an amount</string>
    <string name="toast_no_name">Please enter a name</string>
    <string name="toast_budgets_deleted">Budgets deleted.</string>
    <string name="toast_transactions_deleted">Transactions deleted.</string>
    <string name="toast_scan">Scanning in progress.</string>

    <!-- Notifications -->
    <string name="notification_title_scan">Receipt Scan</string>
    <string name="notification_message_scan_failed">Scanning failed. Please try again.</string>
    <string name="notification_message_scan_progress">Scanning in progress.</string>
    <string name="notification_message_scan_completed">Transaction successfully created.</string>
    <string name="notification_title_transaction">Upcoming Transaction</string>
    <plurals name="notification_message_transaction">
        <item quantity="other">A transaction to the amount of %s is coming up.</item>
    </plurals>

    <!-- Other -->
    <string name="label_amount">Amount</string>
    <string name="hint_amount">Amount</string>
    <string name="button_edit_transaction">Submit Changes</string>
    <string name="button_delete">Delete</string>
    <string name="button_repeating">Not Repeating</string>
    <string name="button_reminder">No Reminder</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="label_description">Description</string>
    <string name="button_date">Set Date</string>
    <string name="never">Never</string>
    <string name="receipt_scanner">Receipt Scanner</string>
    <string name="no_transactions">No transactions found.</string>
    <string name="label_name">Name</string>
    <string name="no_budgets">No budgets found.</string>
    <string name="label_type">Type</string>
    <string name="label_start_date">Periods begins</string>
    <string name="label_target">Budget target</string>
    <string name="expenses_by_category">Expenses by Category</string>
    <string name="overview">Overview</string>
    <string name="expenses">Expenses</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="okay">OK</string>
    <string name="amount_left">Left</string>
    <string name="action_edit">Edit</string>
    <string name="amount_spent">Spent</string>

    <plurals name="average_spent">
        <item quantity="zero"></item>
        <item quantity="other">%s spent per day</item>
    </plurals>

    <plurals name="average_left">
        <item quantity="zero"></item>
        <item quantity="other">%s left per day</item>
    </plurals>

    <plurals name="number_transactions">
        <item quantity="zero">no transactions</item>
        <item quantity="one">1 transaction</item>
        <item quantity="other">%d transactions</item>
    </plurals>

    <string-array name="transaction_repeats">
        <item>Never</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every two weeks</item>
        <item>Every month</item>
        <item>Every year</item>
    </string-array>

    <string-array name="transaction_reminders">
        <item>Never</item>
        <item>1 day before</item>
        <item>2 days before</item>
        <item>3 days before</item>
        <item>4 days before</item>
        <item>5 days before</item>
        <item>6 days before</item>
        <item>7 days before</item>
    </string-array>

    <string-array name="budget_types">
        <item>Weekly budget</item>
        <item>Biweekly budget</item>
        <item>Monthly budget</item>
        <item>Yearly budget</item>
        <item>Endless budget</item>
    </string-array>

    <string-array name="transaction_delete">
        <item>Delete only this</item>
        <item>Delete all related transactions</item>
    </string-array>

</resources>
