<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            style="@style/FloatingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/name"
                style="@style/LabelStyle" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textCapSentences"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            style="@style/FloatingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/label_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/amount"
                style="@style/LabelStyle" />

            <com.mad.qut.budgetr.ui.widget.CurrencyEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:textIsSelectable="false"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textSize="45sp"/>

        </LinearLayout>

        <LinearLayout
            style="@style/FloatingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/label_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LabelStyle" />

            <Spinner
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner"
                android:dropDownVerticalOffset="-64dp"
                android:dropDownWidth="match_parent"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_date_wrapper"
            style="@style/FloatingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:text="@string/label_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LabelStyle" />

            <Spinner
                android:id="@+id/start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner"
                android:dropDownVerticalOffset="-64dp"
                android:dropDownWidth="match_parent"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <com.mad.qut.budgetr.ui.widget.CategoryGridView
            android:id="@+id/categories"
            android:numColumns="auto_fit"
            android:gravity="center"
            android:columnWidth="90dp"
            android:verticalSpacing="8dp"
            android:horizontalSpacing="8dp"
            android:stretchMode="columnWidth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/delete"
            android:text="@string/button_delete"
            android:onClick="onDeleteClick"
            style="@style/RaisedButtonStyle.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</ScrollView>