<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            style="@style/FloatingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/name"
                style="@style/LabelStyle" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="text"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            style="@style/FloatingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/label_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/amount"
                style="@style/LabelStyle" />

            <com.mad.qut.budgetr.ui.widget.CurrencyEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:textIsSelectable="false"
                android:inputType="number"
                android:textSize="45sp"/>

        </LinearLayout>

        <LinearLayout
            style="@style/FloatingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/label_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LabelStyle" />

            <Spinner
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_date_wrapper"
            style="@style/FloatingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:text="@string/label_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LabelStyle" />

            <Spinner
                android:id="@+id/start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.mad.qut.budgetr.ui.widget.CategoryGridView
            android:id="@+id/categories"
            android:numColumns="auto_fit"
            android:gravity="center"
            android:columnWidth="90dp"
            android:verticalSpacing="8dp"
            android:horizontalSpacing="8dp"
            android:stretchMode="columnWidth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</ScrollView>