<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/period"
                android:textSize="16sp"
                android:gravity="start|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_balance" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/PrimaryTextStyle"
                        android:text="@string/overview"/>

                    <TextView
                        android:id="@+id/balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SecondaryTextStyle" />

                </LinearLayout>

                <TextView
                    android:id="@+id/balance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TitleTextStyle" />

            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:visibility="gone"
                android:id="@+id/line_chart"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginBottom="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/list_divider"
                android:layout_gravity="bottom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_income" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/PrimaryTextStyle"
                        android:text="@string/income"/>

                    <TextView
                        android:id="@+id/income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SecondaryTextStyle" />

                </LinearLayout>

                <TextView
                    android:id="@+id/income_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TitleTextStyle"
                    android:textColor="@color/income" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/list_divider"
                android:layout_gravity="bottom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_expense" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/PrimaryTextStyle"
                        android:text="@string/expenses"/>

                    <TextView
                        android:id="@+id/expenses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SecondaryTextStyle" />

                </LinearLayout>

                <TextView
                    android:id="@+id/expenses_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TitleTextStyle"
                    android:textColor="@color/expense" />

            </LinearLayout>

            <com.github.mikephil.charting.charts.PieChart
                android:visibility="gone"
                android:id="@+id/pie_chart"
                android:layout_width="match_parent"
                android:layout_height="240dp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>